--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>RADIO TOXIC</title>
+	<title>RADIO TOXIC | Underground Web Radio</title>
 
 <meta charset="UTF-8">
 <meta name="description" content="Web Radio Station for Cool Kids">
