--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <div class="pure-u-1 pure-u-md-1-3">
               <div class="pure-menu pure-menu-horizontal custom-menu-3 custom-can-transform menu-right">
                   <ul class="pure-menu-list">
-                      <li class="pure-menu-item"><a href="#" class="pure-menu-link"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-                      <li class="pure-menu-item"><a href="#" class="pure-menu-link"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                      <li class="pure-menu-item"><a href="#" class="pure-menu-link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                      <li class="pure-menu-item"><a href="https://www.facebook.com/radiotoxicvancouver/" class="pure-menu-link"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                      <li class="pure-menu-item"><a href="https://www.youtube.com/user/RadioToxicVancouver" class="pure-menu-link"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                      <li class="pure-menu-item"><a href="https://www.instagram.com/radiotoxicvan/" class="pure-menu-link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                   </ul>
               </div>
           </div>
@@ -74,14 +74,16 @@
 <div id ="home">
 	
 	<h1 class="head">RADIO TOXIC</h1>
-	<h2 class="head">Lorem Ipsum Dolor Sit Amet</h2>
+	<h2 class="head">Bridging the gap between the mainstream and the underground since 2011.</h2>
 	
 	<div class="pure-g">
 		<div class="pure-u-1 pure-u-md-1-3 hide"></div>
 		<div class="pure-u-1 pure-u-md-1-3">
+			
 			<div class="radiobox">
+				<h3 class="head">Now Playing:</h3>
 			<!-- insert radio -->
-			insert radio
+			Radio player is currently unavailable and will be back online as soon as possible. Follow us on <a href="https://www.facebook.com/radiotoxicvancouver/">facebook</a> to get updates.
 			</div>
 		</div>
 		<div class="pure-u-1 pure-u-md-1-3 hide"></div>
