Updated schedule images

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					</div>
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
-					<!-- dummy --><img src="image/example.jpg" class="pure-img">
+					<img src="image/fresh-beats.jpg" class="pure-img" alt="Freshbeats">
 				</div>
 			</div>
 			<!--02:00-->
@@ -125,7 +125,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/alternate-future.jpg" class="pure-img" alt="Alternate Future">
 					</div>
 				</div>
 			</div>
@@ -138,7 +138,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/cabaret-electrique.jpg" class="pure-img" alt="Cabaret Electrique">
 					</div>
 				</div>
 			</div>
@@ -151,7 +151,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/electro-therapy.jpg" class="pure-img" alt="Electro Therapy">
 					</div>
 				</div>
 			</div>
@@ -164,7 +164,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/automated-dj-sam.jpg" class="pure-img" alt="Automated DJ SAM">
 					</div>
 				</div>
 			</div>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/drum-and-basement.jpg" class="pure-img" alt="Drum & Bassment">
 					</div>
 				</div>
 			</div>
@@ -190,7 +190,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/top7.jpg" class="pure-img" alt="Toxic Top 7">
 					</div>
 				</div>
 			</div>
@@ -203,7 +203,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/bassline.jpg" class="pure-img" alt="Bassline">
 					</div>
 				</div>
 			</div>
@@ -216,7 +216,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/trapcity.jpg" class="pure-img" alt="Trap City">
 					</div>
 				</div>
 			</div>
@@ -229,7 +229,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/thunderboltsector.jpg" class="pure-img" alt="Thunderbolt Sector">
 					</div>
 				</div>
 			</div>
@@ -242,7 +242,7 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/automated-dj-sam.jpg" class="pure-img" alt="Automated DJ SAM">
 					</div>
 				</div>
 			</div>
@@ -255,7 +255,8 @@
 				</div>
 				<div class="pure-u-1 pure-u-md-2-3 schedulebox">
 					<div class="shellbox">
-						insert banner
+						<img src="image/retro-electro.jpg" class="pure-img" alt="Retro Electro">
+
 					</div>
 				</div>
 			</div>
