Content update - team
- Added team photos
- team photos set to 100% width

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 	<h3>#BLOG</h3>
 
 <div class="box shellbox">
-mother father wordpress coming soon
+Come check out <a href="http://ltt.hza.mybluehost.me/hello-world/">our blog.</a>
 </div>
 
 <hr>
@@ -293,11 +293,11 @@ mother father wordpress coming soon
 	<div class="pure-u-1 pure-u-md-1-3">
 		<div class="pure-u-1">
 			<div class="box shellbox"> <!-- end shellbox when image inserted-->
-				insert photo
+				<img src="image/ace300x300.jpg" class="pure-img" alt="Ace Le">
 			</div>
 			<div class="box">
-			<h4>ACE LE <span class="light">| EDITOR</span></h4>
-			<p>Maecenas eu faucibus magna. Curabitur ultrices dapibus turpis, nec luctus urna vulputate accumsan. Donec mollis euismod est, laoreet lacinia dolor suscipit at. Pellentesque at cursus diam. Cras ac vestibulum nibh. Curabitur mollis, ex hendrerit pulvinar finibus, eros est eleifend augue, quis congue leo urna a turpis. Donec felis neque, ultricies at pellentesque non, congue vitae mi. Cras congue quis est sit amet ullamcorper. Donec semper ullamcorper cursus.</p>
+			<h4>ACE LE <span class="light">| DIRECTOR</span></h4>
+			<p>Curabitur ultrices dapibus turpis, nec luctus urna vulputate accumsan. Curabitur mollis, ex hendrerit pulvinar finibus, eros est eleifend augue, quis congue leo urna a turpis. Cras congue quis est sit amet ullamcorper. Donec semper ullamcorper cursus.</p>
 			</div>
 		</div>
 	</div>
@@ -305,11 +305,11 @@ mother father wordpress coming soon
 	<div class="pure-u-1 pure-u-md-1-3">
 		<div class="pure-u-1">
 			<div class="box shellbox"> <!-- end shellbox when image inserted-->
-				insert photo
+				<img src="image/babykitty300x300.jpg" class="pure-img" alt="Baby Kitty">
 			</div>
 			<div class="box">
-			<h4>YOUR MOM <span class="light">| EDITOR</span></h4>
-			<p>Maecenas eu faucibus magna. Curabitur ultrices dapibus turpis, nec luctus urna vulputate accumsan. Donec mollis euismod est, laoreet lacinia dolor suscipit at. Pellentesque at cursus diam. Cras ac vestibulum nibh. Curabitur mollis, ex hendrerit pulvinar finibus, eros est eleifend augue, quis congue leo urna a turpis. Donec felis neque, ultricies at pellentesque non, congue vitae mi. Cras congue quis est sit amet ullamcorper. Donec semper ullamcorper cursus.</p>
+			<h4>BABY KITTY <span class="light">| PRESIDENT</span></h4>
+			<p>Maecenas eu faucibus magna. Curabitur ultrices dapibus turpis, nec luctus urna vulputate accumsan. Donec mollis euismod est, laoreet lacinia dolor suscipit at. Pellentesque at cursus diam. Cras ac vestibulum nibh.</p>
 			</div>
 		</div>
 	</div>
@@ -317,11 +317,11 @@ mother father wordpress coming soon
 	<div class="pure-u-1 pure-u-md-1-3">
 		<div class="pure-u-1">
 			<div class="box shellbox"> <!-- end shellbox when image inserted-->
-				insert photo
+				<img src="image/ewe300x300.jpg" class="pure-img" alt="Join the team!">
 			</div>
 			<div class="box">
-			<h4>ACE'S CAT <span class="light">| EDITOR</span></h4>
-			<p>Maecenas eu faucibus magna. Curabitur ultrices dapibus turpis, nec luctus urna vulputate accumsan. Donec mollis euismod est, laoreet lacinia dolor suscipit at. Pellentesque at cursus diam. Cras ac vestibulum nibh. Curabitur mollis, ex hendrerit pulvinar finibus, eros est eleifend augue, quis congue leo urna a turpis. Donec felis neque, ultricies at pellentesque non, congue vitae mi. Cras congue quis est sit amet ullamcorper. Donec semper ullamcorper cursus.</p>
+			<h4>CUDBEE EWE <span class="light">| EDITOR</span></h4>
+			<p>Want to work with Radio Toxic? <a href="#contact">Send us a message</a> and tell us about yourself.</p>
 			</div>
 		</div>
 	</div>
@@ -337,7 +337,7 @@ mother father wordpress coming soon
 	<h3>#CONTACT</h3>
 
 <div class="box shellbox">
-form coming soon
+	Contact form coming soon! Until then, get in touch with us on <a href="https://www.facebook.com/radiotoxicvancouver/">facebook</a>.
 </div>
 
 </section>
@@ -366,10 +366,11 @@ form coming soon
 		</div>
 		<div class="pure-u-1 pure-u-md-1-5 footercontent">
 			<div class="box">
-			<a href="#" class="enlarge"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>&nbsp;&nbsp;
-			<a href="#" class="enlarge"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>&nbsp;&nbsp;
-			<a href="#" class="enlarge"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-			<br><br>email: email@email.ca
+			<a href="https://www.facebook.com/radiotoxicvancouver/" class="enlarge"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>&nbsp;&nbsp;
+			<a href="https://www.youtube.com/user/RadioToxicVancouver" class="enlarge"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>&nbsp;&nbsp;
+			<a href="https://www.instagram.com/radiotoxicvan/" class="enlarge"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
+			
+			<br><br>email: ace@radiotoxic.ca
 			</div> <!-- CLARA FAVICON!!!! -->
 		</div>
 		<div class="pure-u-1 pure-u-md-1-5"></div>
