--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Google Font & FONT AWESOME -->
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:700|Ubuntu" rel="stylesheet">
 	<script src="https://use.fontawesome.com/3de05092de.js"></script>
 
 <!-- Pure CSS -->
@@ -83,7 +84,7 @@
 			<div class="radiobox">
 				<h3 class="head">Now Playing:</h3>
 			<!-- insert radio -->
-			Radio player is currently unavailable and will be back online as soon as possible. Follow us on <a href="https://www.facebook.com/radiotoxicvancouver/">facebook</a> to get updates.
+			Radio player is currently unavailable and will be back online as soon as possible. Follow us on <a href="https://www.facebook.com/radiotoxicvancouver/">facebook</a> to get updates.	
 			</div>
 		</div>
 		<div class="pure-u-1 pure-u-md-1-3 hide"></div>
